# exe2dll

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
exe2dll/: exe2dll.cpp
test/: test.cpp
